# Lesta_Game_test_task

./: CMakeLists.txt  README.md  circle_buffer_array.cpp  main.cpp
src/Task_1/: IsEven.cpp
src/Task_2/: circle_buffer_array.h  circle_buffer_list.h
src/Task_3/: Quick_sort.h
test/: test.cpp  test_circle_array.h  test_circle_list.h
